test/domains/compilerErrors/initDomainWithNonDomain.good
initDomainWithNonDomain.chpl:4: error: Domains cannot be initialized using expressions of non-domain type
